# neptun.bot

./: .gitignore  ABOUT_THIS_TEMPLATE.md  CONTRIBUTING.md  Containerfile  Dockerfile  HISTORY.md  MANIFEST.in  Makefile  README.md  docker-compose.yaml  examples.md  mkdocs.yml  pyproject.toml  requirements-test.txt  requirements.txt  scrapy.cfg  setup.py  start-auto-docker-images-scrapper.sh  start-popular-docker-images-scraper.sh
.github/: rename_project.sh
neptun_webscraper/: __init__.py  __main__.py  base.py  cli.py  dockerhub_registry_spider.py  quay_registry_spider.py
neptun_webscraper/spiders/: dockerhub.py  dockerhub_example_response.html  dockerhub_example_response_using_playwright_chromium.html  dockerhub_example_response_using_playwright_firefox.html  dockerhub_example_response_using_splash.html  dockerhub_example_response_using_splash_extended_using_public_mode.html  quay.py
neptun_webscraper/spiders/logs/: 20240630183023.json  20240701200912.json  20240701202835.json  20240701210421.json  (+7 more)
neptunscraper/: helpers.py  items.py  middlewares.py  pipelines.py  settings.py
neptunscraper/spiders/: docker_blog_post.py  dockerdocs_docker_compose.py  dockerhub.py  dockerhub_blog_post.py  dockerhub_blog_posts.py  dockerhub_queried_registry.py  dockerhub_queried_registry_search.py  dockerhub_queried_registry_search_auto.py  dockerhub_queried_registry_search_temp.py  example.json
scrapydweb/: Dockerfile  scrapydweb_settings_v10.py
scrapyrt/: Dockerfile
tech_stack_ai_configuration_data_scraper/: __main__.py  base.py  cli.py
tests/: test_base.py
(+14 files in other folders)
