[tool.poetry]
name = "neptunscraper"
version = "0.0.1"
description = "This webscraper is used to scrap data from dockerhub and quayiio"
authors = ["stevan06v", "jonasfroeller"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
scrapy = "^2.11.2"
scrapyd = "^1.4.3"
scrapy-playwright = "^0.0.38"
python-dateutil = "^2.9.0.post0"
types-python-dateutil = "^2.9.0.20240316"
scrapyd-client = "^1.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
